# gigachad

./: CHANGELOG.md  gigachad.cabal
app/: Main.hs
src/: Bot.hs  Commands.hs  Handlers.hs
