cabal-version: 1.12

name:           gigachad
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/offendo/gigachad#readme>
homepage:       https://github.com/githubuser/gigachad#readme
bug-reports:    https://github.com/githubuser/gigachad/issues
author:         offendo
maintainer:     offendo@gmail.com
copyright:      2021 offendo
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/gigachad

library
  exposed-modules:
      Bot
      Commands
      Handlers
  other-modules:
      Paths_gigachad
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , discord-haskell
    , megaparsec
    , text
    , time
    , unliftio
    , random
    , mtl
  default-language: Haskell2010

executable gigachad
  main-is: Main.hs
  other-modules:
      Paths_gigachad
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , discord-haskell
    , gigachad
    , megaparsec
    , text
    , time
    , unliftio
    , random
    , mtl
  default-language: Haskell2010

test-suite gigachad-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_gigachad
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , discord-haskell
    , gigachad
    , megaparsec
    , text
    , time
    , unliftio
    , random
    , mtl
  default-language: Haskell2010
